Fix HTML formatting issues in galerie.html

--- a/galerie.html
+++ b/galerie.html
@@ -46,7 +46,7 @@
         <span class="title">Work in progress — 2025</span>
         <div class="actions">
           <a class="btn-zoom" href="#img1" aria-label="Voir en grand">🔍 Zoom</a>
-          <a class="btn-details" href="oeuvres/pending.html">📄 Fiche</a>
+          <a class="btn-details" href="pending.html">📄 Fiche</a>
         </div>
       </figcaption>
     </figure>
@@ -63,7 +63,7 @@
         <span class="title">Illustration — Couleur</span>
         <div class="actions">
           <a class="btn-zoom" href="#img2" aria-label="Voir en grand">🔍 Zoom</a>
-          <a class="btn-details" href="oeuvres/illustration.html">📄 Fiche</a>
+          <a class="btn-details" href="illustration.html">📄 Fiche</a>
         </div>
       </figcaption>
     </figure>
@@ -80,7 +80,7 @@
         <span class="title">Illustration — Variation</span>
         <div class="actions">
           <a class="btn-zoom" href="#img3" aria-label="Voir en grand">🔍 Zoom</a>
-          <a class="btn-details" href="oeuvres/illustration-variation.html">📄 Fiche</a>
+          <a class="btn-details" href="illustration-variation.html">📄 Fiche</a>
         </div>
       </figcaption>
     </figure>
@@ -95,7 +95,7 @@
       <a href="#img2" class="next" aria-label="Suivant">›</a>
     </nav>
     <a class="lightbox-close" href="#" aria-label="Fermer">✕</a>
-    <a class="lightbox-details" href="oeuvres/pending.html">📄 Fiche de l’œuvre</a>
+    <a class="lightbox-details" href="pending.html">📄 Fiche de l’œuvre</a>
   </div>
 
   <div id="img2" class="lightbox" role="dialog" aria-modal="true" aria-label="Illustration — Couleur">
@@ -106,7 +106,7 @@
       <a href="#img3" class="next" aria-label="Suivant">›</a>
     </nav>
     <a class="lightbox-close" href="#" aria-label="Fermer">✕</a>
-    <a class="lightbox-details" href="oeuvres/illustration.html">📄 Fiche de l’œuvre</a>
+    <a class="lightbox-details" href="illustration.html">📄 Fiche de l’œuvre</a>
   </div>
 
   <div id="img3" class="lightbox" role="dialog" aria-modal="true" aria-label="Illustration — Variation">
@@ -117,7 +117,7 @@
       <a href="#img1" class="next" aria-label="Suivant">›</a>
     </nav>
     <a class="lightbox-close" href="#" aria-label="Fermer">✕</a>
-    <a class="lightbox-details" href="oeuvres/illustration-variation.html">📄 Fiche de l’œuvre</a>
+    <a class="lightbox-details" href="illustration-variation.html">📄 Fiche de l’œuvre</a>
   </div>
 </main>
 
@@ -126,5 +126,6 @@
   </footer>
 </body>
 </html>
+
 
 
