Update stylesheet link in pending.html

--- a/pending.html
+++ b/pending.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Polices & CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Roboto&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="/mangaart/style.css">
   <!-- SEO/Partage -->
   <meta name="description" content="WIP d’une illustration manga par Samael Art — exploration du concept et processus créatif.">
   <meta property="og:title" content="Work in progress — Samael Art">
