Update project details and image source in pending.html

--- a/pending.html
+++ b/pending.html
@@ -48,12 +48,12 @@
 
   <main class="work">
     <div class="work-header">
-      <h1 class="work-title">Work in progress — 2025</h1>
-      <p class="work-subtitle">Exploration du concept & premières étapes</p>
+      <h1 class="work-title">Sung Jin-woo — 2025</h1>
+      <p class="work-subtitle">Apprentissage du digital</p>
     </div>
 
     <figure class="work-hero">
-      <img src="../images/Pending.png"
+      <img src="/images/Pending.png"
            alt="Work in progress : esquisse d’une illustration manga"
            loading="lazy" decoding="async" />
       <figcaption>© 2025 Samael Art</figcaption>
@@ -62,10 +62,10 @@
     <section class="work-meta">
       <h2>Infos</h2>
       <ul>
-        <li><strong>Date :</strong> Janvier 2025</li>
-        <li><strong>Outils :</strong> Clip Studio Paint, tablette</li>
-        <li><strong>Technique :</strong> Encrage numérique, aplat</li>
-        <li><strong>Dimensions :</strong> 3000×4000 px (exemple)</li>
+        <li><strong>Date :</strong> Août 2025</li>
+        <li><strong>Outils :</strong> Papier, crayon de bois, Clip Studio Paint</li>
+        <li><strong>Technique :</strong> Esquisse sur papier et encrage numérique</li>
+        <li><strong>Dimensions :</strong> A4 </li>
         <li><strong>Tags :</strong> manga, WIP, rough, encrage</li>
       </ul>
       <a href="../galerie.html" class="btn">← Retour à la galerie</a>
@@ -73,14 +73,14 @@
 
     <section class="work-body">
       <h2>Concept & processus</h2>
-      <p>Première intention visuelle pour une illustration manga. L’accent est mis sur la pose et la dynamique, avec un travail sur le rythme des masses avant d’affiner le design.</p>
+      <p>Première intention visuelle sur un dessin réalisé à la main puis coloriser sur du digital sans matériel spécifique.</p>
 
       <h3>Étapes de création</h3>
       <ol>
-        <li>Recherche & thumbnails rapides pour la composition.</li>
-        <li>Rough plus lisible : placement des volumes & silhouette.</li>
-        <li>Premières lignes (encrage) pour caler les contours essentiels.</li>
-        <li>Tests de couleur en aplat, valeurs & lumière.</li>
+        <li>Esquisse réalisée sur papier avec critérium.</li>
+        <li>Scan pour passage sur une colorisation digitale.</li>
+        <li>Line réalisé à la main sans tablette (je ne l'avais pas encore).</li>
+        <li>Colorisation également réalisée sans tablette graphique.</li>
       </ol>
     </section>
 
