Fix image source path in pending.html

--- a/pending.html
+++ b/pending.html
@@ -53,7 +53,7 @@
     </div>
 
     <figure class="work-hero">
-      <img src="/images/Pending.png"
+      <img src="images/Pending.png"
            alt="Work in progress : esquisse d’une illustration manga"
            loading="lazy" decoding="async" />
       <figcaption>© 2025 Samael Art</figcaption>
