--- a/pending.html
+++ b/pending.html
@@ -36,12 +36,12 @@
       <input type="checkbox" id="menu-toggle" />
       <label for="menu-toggle" class="menu-icon">&#9776;</label>
       <ul class="menu">
-        <li><a href="../index.html">Accueil</a></li>
-        <li><a href="../galerie.html" class="active">Galerie</a></li>
-        <li><a href="../boutique.html">Boutique</a></li>
-        <li><a href="../blog.html">Blog</a></li>
-        <li><a href="../apropos.html">A propos</a></li>
-        <li><a href="../contact.html">Contact</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="galerie.html" class="active">Galerie</a></li>
+        <li><a href="boutique.html">Boutique</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="apropos.html">A propos</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </header>
@@ -68,7 +68,7 @@
         <li><strong>Dimensions :</strong> A4 </li>
         <li><strong>Tags :</strong> manga, WIP, rough, encrage</li>
       </ul>
-      <a href="../galerie.html" class="btn">← Retour à la galerie</a>
+      <a href="galerie.html" class="btn">← Retour à la galerie</a>
     </section>
 
     <section class="work-body">
