--- a/pending.html
+++ b/pending.html
@@ -55,7 +55,8 @@
     <figure class="work-hero">
       <img src="images/Pending.png"
            alt="Work in progress : esquisse d’une illustration manga"
-           loading="lazy" decoding="async" width="400"/>
+           loading="lazy" decoding="async" />
+      <img src="img/Pending.png" width="400">
       <figcaption>© 2025 Samael Art</figcaption>
     </figure>
 
