--- a/illustration.html
+++ b/illustration.html
@@ -36,12 +36,12 @@
       <input type="checkbox" id="menu-toggle" />
       <label for="menu-toggle" class="menu-icon">&#9776;</label>
       <ul class="menu">
-        <li><a href="../index.html">Accueil</a></li>
-        <li><a href="../galerie.html" class="active">Galerie</a></li>
-        <li><a href="../boutique.html">Boutique</a></li>
-        <li><a href="../blog.html">Blog</a></li>
-        <li><a href="../apropos.html">A propos</a></li>
-        <li><a href="../contact.html">Contact</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="galerie.html" class="active">Galerie</a></li>
+        <li><a href="boutique.html">Boutique</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="apropos.html">A propos</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </header>
@@ -83,30 +83,7 @@
         <li>Colorisation également réalisée sans tablette graphique.</li>
       </ol>
     </section>
-
-    <section class="work-gallery">
-      <h2>WIP / variantes</h2>
-      <div class="work-thumbs">
-        <figure>
-          <img src="../images/Illustration-wip1.jpg"
-               alt="Rough d’illustration manga — construction"
-               loading="lazy" decoding="async" />
-          <figcaption>Rough / construction</figcaption>
-        </figure>
-        <figure>
-          <img src="../images/Illustration-wip2.jpg"
-               alt="Ligne — encrage de l’illustration manga"
-               loading="lazy" decoding="async" />
-          <figcaption>Line / encrage</figcaption>
-        </figure>
-        <figure>
-          <img src="../images/Illustration2.jpg"
-               alt="Variante couleur de l’illustration manga"
-               loading="lazy" decoding="async" />
-          <figcaption>Variante</figcaption>
-        </figure>
-      </div>
-    </section>
+    
   </main>
 
   <footer>
