Fix link to gallery page in illustration.html

--- a/illustration.html
+++ b/illustration.html
@@ -68,7 +68,7 @@
         <li><strong>Dimensions :</strong> A4 </li>
         <li><strong>Tags :</strong> manga, WIP, rough, encrage</li>
       </ul>
-      <a href="../galerie.html" class="btn">← Retour à la galerie</a>
+      <a href="galerie.html" class="btn">← Retour à la galerie</a>
     </section>
 
     <section class="work-body">
