Fix HTML formatting and structure in galerie.html

--- a/galerie.html
+++ b/galerie.html
@@ -80,7 +80,7 @@
         <span class="title">Illustration — Variation</span>
         <div class="actions">
           <a class="btn-zoom" href="#img3" aria-label="Voir en grand">🔍 Zoom</a>
-          <a class="btn-details" href="illustration-variation.html">📄 Fiche</a>
+          <a class="btn-details" href="illustration2.html">📄 Fiche</a>
         </div>
       </figcaption>
     </figure>
@@ -126,6 +126,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
