Add initial HTML structure for illustration page

--- a/illustration2.html
+++ b/illustration2.html
@@ -1,1 +1,93 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <title>Work in progress — Samael Art</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Polices & CSS -->
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Roboto&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="/mangaart/style.css">
+  <!-- SEO/Partage -->
+  <meta name="description" content="WIP d’une illustration manga par Samael Art — exploration du concept et processus créatif.">
+  <meta property="og:title" content="Work in progress — Samael Art">
+  <meta property="og:description" content="Processus de création et étapes d’un WIP manga.">
+  <meta property="og:image" content="https://samaelart.github.io/mangaart/images/Illustration.png">
+  <meta property="og:type" content="website">
+  <!-- Données structurées (Schema.org) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "VisualArtwork",
+    "name": "Work in progress",
+    "creator": { "@type": "Person", "name": "Samael Art" },
+    "artMedium": "Numérique",
+    "artform": "Manga/Illustration",
+    "dateCreated": "2025-01-01",
+    "image": "https://samaelart.github.io/mangaart/images/Pending.png",
+    "description": "WIP d’une illustration manga : recherche, line, couleur.",
+    "keywords": "manga, illustration, WIP, process"
+  }
+  </script>
+</head>
+<body>
+  <header>
+    <div class="navbar">
+      <div class="logo">Samael Art</div>
+      <input type="checkbox" id="menu-toggle" />
+      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+      <ul class="menu">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="galerie.html" class="active">Galerie</a></li>
+        <li><a href="boutique.html">Boutique</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="apropos.html">A propos</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </header>
 
+  <main class="work">
+    <div class="work-header">
+      <h1 class="work-title">Naruto — 2026</h1>
+      <p class="work-subtitle">Apprentissage du digital</p>
+    </div>
+
+    <figure class="work-hero">
+      <img src="images/Illustration2.jpg"
+           alt="Work in progress : esquisse d’une illustration manga"
+           loading="lazy" decoding="async" />
+      <figcaption>© 2025 Samael Art</figcaption>
+    </figure>
+
+    <section class="work-meta">
+      <h2>Infos</h2>
+      <ul>
+        <li><strong>Date :</strong> Août 2025</li>
+        <li><strong>Outils :</strong> Papier, crayon de bois, Clip Studio Paint</li>
+        <li><strong>Technique :</strong> Esquisse sur papier et encrage numérique</li>
+        <li><strong>Dimensions :</strong> A4 </li>
+        <li><strong>Tags :</strong> manga, WIP, rough, encrage</li>
+      </ul>
+      <a href="galerie.html" class="btn">← Retour à la galerie</a>
+    </section>
+
+    <section class="work-body">
+      <h2>Concept & processus</h2>
+      <p>Première intention visuelle sur un dessin réalisé à la main puis coloriser sur du digital sans matériel spécifique.</p>
+
+      <h3>Étapes de création</h3>
+      <ol>
+        <li>Esquisse réalisée sur papier avec critérium.</li>
+        <li>Scan pour passage sur une colorisation digitale.</li>
+        <li>Line réalisé à la main sans tablette (je ne l'avais pas encore).</li>
+        <li>Colorisation également réalisée sans tablette graphique.</li>
+      </ol>
+    </section>
+    
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Simon - Tous droits réservés</p>
+  </footer>
+</body>
+</html>
