Fix HTML encoding issues in galerie.html

--- a/galerie.html
+++ b/galerie.html
@@ -117,7 +117,7 @@
       <a href="#img1" class="next" aria-label="Suivant">›</a>
     </nav>
     <a class="lightbox-close" href="#" aria-label="Fermer">✕</a>
-    <a class="lightbox-details" href="illustration-variation.html">📄 Fiche de l’œuvre</a>
+    <a class="lightbox-details" href="illustration2.html">📄 Fiche de l’œuvre</a>
   </div>
 </main>
 
@@ -126,6 +126,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
