--- a/index.html
+++ b/index.html
@@ -36,6 +36,31 @@
       <p>Je suis Simon, dessinateur depuis de très longues années, je suis disponible pour toutes commandes ou créations spécifique, vous pouvez pour cela utiliser mon formulaire de contact !</p>
     </section>
 
+    <!-- =========================================================
+     SECTION PROGRESSION MANGA — STYLE SHONEN
+========================================================= -->
+<section class="manga-progress shonen">
+  <h2>Avancée du Manga</h2>
+
+  <div class="chapter">
+    <h3>Chapitre 1 — L'Éveil</h3>
+    <div class="bar"><span style="width: 80%;"></span></div>
+    <p>Encrage en cours — 80%</p>
+  </div>
+
+  <div class="chapter">
+    <h3>Chapitre 2 — La Chute</h3>
+    <div class="bar"><span style="width: 100%;"></span></div>
+    <p>Terminé ✔</p>
+  </div>
+
+  <div class="chapter">
+    <h3>Chapitre 3 — La Chasse</h3>
+    <div class="bar"><span style="width: 40%;"></span></div>
+    <p>Storyboard — 40%</p>
+  </div>
+</section>
+
      <!-- COMPETENCES -->
     <article class="competences"> 
     <h3>Mes compétences :</h3>
@@ -76,6 +101,7 @@
 </body>
 
 </html>
+
 
 
 
