Revise manga progress and add new chapter details
Updated manga progress sections and added new chapters.

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
   <h2>Avancée du Manga</h2>
 
   <div class="chapter">
-    <h3>Chapitre 1 — L'Éveil</h3>
-    <div class="bar"><span style="width: 80%;"></span></div>
-    <p>Encrage en cours — 80%</p>
+    <h3>Scénario</h3>
+    <div class="bar"><span style="width: 15%;"></span></div>
+    <p>En cours — 15%</p>
   </div>
 
   <div class="chapter">
-    <h3>Chapitre 2 — La Chute</h3>
-    <div class="bar"><span style="width: 100%;"></span></div>
-    <p>Terminé ✔</p>
+    <h3>Story Board</h3>
+    <div class="bar"><span style="width: 0%;"></span></div>
+    <p>En cours - 0%</p>
   </div>
 
   <div class="chapter">
-    <h3>Chapitre 3 — La Chasse</h3>
-    <div class="bar"><span style="width: 40%;"></span></div>
-    <p>Storyboard — 40%</p>
+    <h3>Chapitre 1</h3>
+    <div class="bar"><span style="width: 0%;"></span></div>
+    <p>En cours - 0%</p>
   </div>
 </section>
 
@@ -101,6 +101,7 @@
 </body>
 
 </html>
+
 
 
 
