--- a/galerie.html
+++ b/galerie.html
@@ -23,6 +23,7 @@
         <li><a class="active" href="galerie.html">Galerie</a></li>
         <li><a href="boutique.html">Boutique</a></li>
         <li><a href="blog.html">Blog</a></li>
+        <li><a href="manga.html">Mon manga</a></li>
         <li><a href="apropos.html">A propos de moi</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -126,6 +127,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
