--- a/boutique.html
+++ b/boutique.html
@@ -18,6 +18,7 @@
         <li><a href="galerie.html">Galerie</a></li>
         <li><a href="boutique.html" class="active">Boutique</a></li>
         <li><a href="blog.html">Blog</a></li>
+        <li><a href="manga.html">Mon manga</a></li>
         <li><a href="apropos.html">A propos de moi</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -125,6 +126,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
