--- a/blog.html
+++ b/blog.html
@@ -88,6 +88,7 @@
   <li><a href="galerie.html">Galerie</a></li>
   <li><a href="boutique.html">Boutique</a></li>
   <li><a href="blog.html">Blog</a></li>
+  <li><a href="manga.html">Mon manga</a></li>
   <li><a href="apropos.html">A propos de moi</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
@@ -164,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
