--- a/illustration2.html
+++ b/illustration2.html
@@ -40,6 +40,7 @@
         <li><a href="galerie.html" class="active">Galerie</a></li>
         <li><a href="boutique.html">Boutique</a></li>
         <li><a href="blog.html">Blog</a></li>
+        <li><a href="manga.html">Mon manga</a></li>
         <li><a href="apropos.html">A propos</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
