--- a/manga.html
+++ b/manga.html
@@ -39,32 +39,27 @@
 
   <!-- CONTENU PRINCIPAL -->
   <main>
-    <section class="manga-progress shonen">
-      <h2>Avancée du Manga</h2>
+   <section class="manga-progress shonen">
+  <h2>Avancée du Manga</h2>
 
-      <!-- Exemple Chapitre 1 -->
-      <div class="chapter">
-        <h3>Chapitre 1 — L'Éveil</h3>
-        <div class="bar"><span style="width: 80%;"></span></div>
-        <p>Encrage en cours — 80%</p>
-      </div>
+  <div class="chapter">
+    <h3>Scénario</h3>
+    <div class="bar"><span style="width: 15%;"></span></div>
+    <p>En cours — 15%</p>
+  </div>
 
-      <!-- Exemple Chapitre 2 -->
-      <div class="chapter">
-        <h3>Chapitre 2 — La Chute</h3>
-        <div class="bar"><span style="width: 100%;"></span></div>
-        <p>Terminé ✔</p>
-      </div>
+  <div class="chapter">
+    <h3>Story Board</h3>
+    <div class="bar"><span style="width: 0%;"></span></div>
+    <p>En cours - 0%</p>
+  </div>
 
-      <!-- Exemple Chapitre 3 -->
-      <div class="chapter">
-        <h3>Chapitre 3 — La Chasse</h3>
-        <div class="bar"><span style="width: 40%;"></span></div>
-        <p>Storyboard — 40%</p>
-      </div>
-
-      <!-- Tu peux dupliquer .chapter pour ajouter d'autres chapitres -->
-    </section>
+  <div class="chapter">
+    <h3>Chapitre 1</h3>
+    <div class="bar"><span style="width: 0%;"></span></div>
+    <p>En cours - 0%</p>
+  </div>
+</section>
   </main>
 
   <footer>
