--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- =========================================================
      SECTION PROGRESSION MANGA — STYLE SHONEN
 ========================================================= -->
-<section class="manga-progress shonen">
+<section class="manga-progress shonen is-compact">
   <h2>Avancée du Manga</h2>
 
   <div class="chapter">
@@ -102,6 +102,7 @@
 </body>
 
 </html>
+
 
 
 
