--- a/manga.html
+++ b/manga.html
@@ -60,6 +60,18 @@
     <p>En cours - 0%</p>
   </div>
 </section>
+
+    <div class="article">
+    <h3>EN COURS</h3>
+    <p class="excerpt">En cours </p>
+    <button class="toggle-btn" onclick="toggleArticle(this)">
+      <span class="label">Lire plus</span>
+      <span class="arrow">▼</span>
+    </button>
+    <div class="full-text">
+      <p>En cours </p>
+    </div>
+    
   </main>
 
   <footer>
