--- a/manga.html
+++ b/manga.html
@@ -37,6 +37,78 @@
     </nav>
   </header>
 
+  <style>
+     
+    h2 {
+      font-family: 'Bangers', cursive;
+      font-size: 2.5em;
+      color: #e63946;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+
+    .article {
+      background-color: #fff;
+      padding: 20px;
+      margin-bottom: 30px;
+      border-left: 5px solid #e63946;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      text-align: left;
+      position: relative;
+    }
+
+    .article h3 {
+      margin-bottom: 10px;
+      color: #e63946;
+    }
+
+    .excerpt {
+      font-style: italic;
+      color: #555;
+    }
+
+    .full-text {
+      margin-top: 15px;
+      opacity: 0;
+      max-height: 0;
+      overflow: hidden;
+      transition: all 0.5s ease;
+    }
+
+    .full-text.visible {
+      opacity: 1;
+      max-height: 500px;
+    }
+
+    .toggle-btn {
+      background-color: #e63946;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      font-size: 16px;
+      border-radius: 30px;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      transition: background-color 0.3s ease;
+      margin-top: 10px;
+    }
+
+    .toggle-btn:hover {
+      background-color: #d62839;
+    }
+
+    .toggle-btn .arrow {
+      transition: transform 0.3s ease;
+    }
+
+    .toggle-btn.open .arrow {
+      transform: rotate(180deg);
+    }
+  </style>
+  
   <!-- CONTENU PRINCIPAL -->
   <main>
    <section class="manga-progress shonen">
