--- a/manga.html
+++ b/manga.html
@@ -30,6 +30,7 @@
         <li><a href="index.html">Accueil</a></li>
         <li><a href="galerie.html">Galerie</a></li>
         <li><a href="boutique.html">Boutique</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="manga.html" class="active">Mon manga</a></li>
         <li><a href="apropos.html">À propos</a></li>
         <li><a href="contact.html">Contact</a></li>
