--- a/manga.html
+++ b/manga.html
@@ -32,7 +32,7 @@
         <li><a href="boutique.html">Boutique</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="manga.html" class="active">Mon manga</a></li>
-        <li><a href="apropos.html">À propos</a></li>
+        <li><a href="apropos.html">A propos de moi</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
