--- a/apropos.html
+++ b/apropos.html
@@ -29,12 +29,17 @@
     <section>
         <h2>Introduction personnelle</h2>
         <p>Bonjour et bienvenue sur <strong>Samael Art</strong> !<br>
-        Je m'appelle Simon, un dessinateur amateur, passionné du Japon et de manga, et j'ai depuis peu décidé de partager ici mes créations et m'ouvrir aux commandes et projets. </p>
+        Je m'appelle Simon, un dessinateur amateur, passionné du Japon et de manga (encore un ?), et j'ai depuis peu décidé de partager ici mes créations et m'ouvrir aux commandes et projets (si elle vous intéresse, restons cohérent, c'est un plaisir et non pas un business). </p>
     </section>
 
     <section>
         <h2>Parcours artistique</h2>
-        <p>Depuis mon plus jeune âge, je suis fasciné par les mangas japonais, les jeux vidéo et l’animation. Ce site est né de cette passion, avec l’envie de créer un espace où je peux exposer mes œuvres et échanger avec d’autres passionnés et pourquoi pas vendre mes oeuvres si celles-ci vous plaisent.</p>
+        <p>Depuis mon plus jeune âge, je suis fasciné par les mangas japonais, les jeux vidéo et l’animation. Ce site est né de cette passion, avec l’envie de créer un espace où je peux exposer mes œuvres et échanger avec d’autres passionnés.
+        Pour entrer un peu plus dans les détails, j'ai commencé le manga au début de mes années collège, avec l'un de mes amis les plus proches de l'époque (si tu passe par ici, coucou Hugo !).
+        C'était un parcours du combattant, certes j'étais déjà doué mais c'est là que j'ai compris plusieurs choses, être doué c'est bien, mais pour avancer, il faut travailler.
+        J'ai donc commencé avec une page du manga (le premier que j'ai lu, et mon préféré encore aujourd'hui) Naruto ! Je m'en rappelle comme si c'était hier, le fameux genjutsu de Itachi sur Naruto ou Naruto se scinde en lui et Sasuke.
+        Je l'ai recommencé un nombre incalculable de fois, jusqu'au jour ou, j'ai enfin été fier de moi, perspective, proportion, tout était la !   
+    </p>
     </section>
 
     <section>
@@ -64,6 +69,7 @@
 </body>
 
 </html>
+
 
 
 
