--- a/apropos.html
+++ b/apropos.html
@@ -38,7 +38,14 @@
         Pour entrer un peu plus dans les détails, j'ai commencé le manga au début de mes années collège, avec l'un de mes amis les plus proches de l'époque (si tu passe par ici, coucou Hugo !).
         C'était un parcours du combattant, certes j'étais déjà doué mais c'est là que j'ai compris plusieurs choses, être doué c'est bien, mais pour avancer, il faut travailler.
         J'ai donc commencé avec une page du manga (le premier que j'ai lu, et mon préféré encore aujourd'hui) Naruto ! Je m'en rappelle comme si c'était hier, le fameux genjutsu de Itachi sur Naruto ou Naruto se scinde en lui et Sasuke.
-        Je l'ai recommencé un nombre incalculable de fois, jusqu'au jour ou, j'ai enfin été fier de moi, perspective, proportion, tout était la !   
+        Je l'ai recommencé un nombre incalculable de fois, jusqu'au jour ou, j'ai enfin été fier de moi, perspective, proportion, tout était la !  
+
+        En somme, pour résumer mon parcours, on va plutôt parler d'années, et ça en fait 17 maintenant.
+
+        Donc, l'apprentissage, les premières esquisses, les premières lines ensuite, j'ai commencé à faire des oeuvres originales (OC) et j'ai ensuite réalisé un apprentissage au niveau de la colorisation.
+        C'est mon plus gros souci d'ailleurs, car j'ai essayé à peu près tout, prismacolor, polychromos, promarker, copic, mais le résultat ne me plait jamais à 100%.
+        Sur la fin d'année 2025 j'ai donc fais l'acquisition d'une tablette graphique (XPPEN ARTIST PRO 14, si ça t'intéresse !) et je commence donc le digital.
+        Je reste en revanche ouvert à toutes commissions 
     </p>
     </section>
 
@@ -69,6 +76,7 @@
 </body>
 
 </html>
+
 
 
 
